feat: show rent form

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -30,5 +30,8 @@
       "reloadServer": false
     }
   ],
-  "aceProviders": ["@adonisjs/repl"]
+  "aceProviders": ["@adonisjs/repl"],
+  "namespaces": {
+    "httpControllers": "App/Controllers"
+  }
 }
