--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "build": "node ace build --production",
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.3.7",
+    "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^1.3.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.2.4",
     "pino-pretty": "^7.0.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.2.4",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
