--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "@adonisjs/repl",
       "@adonisjs/session",
       "@adonisjs/view",
-      "@adonisjs/shield"
+      "@adonisjs/shield",
+      "jest"
     ]
   }
 }
