--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@adonisjs/session": "^6.1.2",
     "@adonisjs/shield": "^7.0.6",
     "@adonisjs/view": "^6.1.1",
+    "cypress": "^9.3.1",
     "mongodb": "^4.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
